tests/NormalTests/paczka2/big_fuzzy/67380185.err
Error in line 7: BGdFHP1rj A604 M1,9
Error in line 9: OqMlWuhYr S311 14,60
Error in line 19: JJcz3 A416 96,6
Error in line 12: BGdFHP1rj A604 8,8
Error in line 21: BGdFHP1rj A471 55,6
Error in line 28: JJcz3 A416 62,1
Error in line 34: OMaimFY A416 7,7
Error in line 53: A604 A604 426,8
Error in line 55: OqMlWuhYr S311 207,8
Error in line 44: JJcz3 A471 65,5
Error in line 61: BGdFHP1rj A416 94,61
Error in line 65: IzonZrVDvD A471 69,8
Error in line 74: OMaimFY A416 81,0
Error in line 75: IzonZrVDvD S311 60,8
Error in line 79: OMaimFY A601 20,7
Error in line 81: OMaimFY A604 51,1
Error in line 94: IzonZrVDvD A416 263,0
Error in line 97: IzonZrVDvD S311 74,9
Error in line 99: IzonZrVDvD A471 65,8
Error in line 83: OqMlWuhYr A471 270,7
Error in line 100: IzonZrVDvD A604 94,0
Error in line 102: IzonZrVDvD S311 19,0
Error in line 114: OMaimFY A471 98,17
Error in line 118: BGdFHP1rj A416 12,5
Error in line 122: BGdFHP1rj S311 48,6
Error in line 111: A604 A416 263,9
Error in line 148: OqMlWuhYr A471 10,2
Error in line 151: OqMlWuhYr A604 89,3
Error in line 152: OqMlWuhYr S311 82,6
Error in line 120: IzonZrVDvD A604 341,4
Error in line 164: A604 S311 84,5
Error in line 175: A604 A416 13,7
Error in line 177: JJcz3 A471 29,9
Error in line 180: JJcz3 A604 18,8
Error in line 193: OMaimFY S311 77,6
Error in line 192: JJcz3 S311 59,2
Error in line 198: JJcz3 A471 94,7
Error in line 200: JJcz3 S311 12,1
Error in line 214: OMaimFY3A471347,4
Error in line 168: BGdFHP1rj S311 2,1
Error in line 211: OMaimFY A416 120,2
Error in line 220: BGdFHP1rj A416 45,0
Error in line 238: POxx A471 52,6
